--- a/style.css
+++ b/style.css
@@ -17,19 +17,20 @@
   background-color: white;
 }
 .subtitle {
-  background-image: url(./img/banner.jpg);  
+  background-image: url(./img/banner1.webp);  
   color: rgb(231, 232, 238);
   font-size: 5em;
   margin-top: -0.5em;
   text-decoration:  firebrick;
   text-align: center;
+  background-size: contain, cover;
 }
 #heading1 {
-  background-image: url(./img/moviesBanner.jpeg);  
+  background-image: url(./img/banner1.html);  
   color: rgb(242, 236, 236);
   background-color: #d21ee7da;
   border-color: red;
-  font-size: 5em;
+  font-size: 3em;
   text-align: center;
   padding: 2% 2% 2% 2%;
   /* 
